# SlickDealsMCP

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py
src/Core/: deals.py  searchdeals.py
src/Helpers/: scrape.py  utils.py  validators.py
src/Models/: DataModel.py  __init__.py
src/Prompts/: budgetshopping.py  findbestdeal.py  findlatestdeal.py
src/Services/: fetcher.py  parser.py
src/tools/: __init__.py  hotdeals.py  latestdeals.py  mcp.py  pricefilter.py  searchdeals.py
tests/test_helpers/test_utils/: affordabilitychecktest.py  extractposteddatetest.py  getdealpricetest.py  getdiscountpercentagetest.py
tests/test_helpers/test_validators/: validatesearchitemtest.py
tests/test_mcp/: toolregistrationtest.py
tests/test_services/: fetchertest.py  testdata.py
