[project]
name = "slickdealsmcp"
version = "0.1.0"
description = "SlickDeals MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "fastmcp",
    "requests",
    "beautifulsoup4",
    "pydantic",
    "lxml",
]

[project.scripts]
slickdeals-mcp = "main:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules=["main"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]